# meteos

./: .gitignore  .gitreview  .testr.conf  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
devstack/: README.rst  exercise.sh  plugin.sh  settings
doc/source/: architecture.rst  conf.py  index.rst  overview.rst
etc/meteos/: README.meteos.conf  api-paste.ini.orig  logging_sample.conf  meteos.conf  policy.json  rootwrap.conf
etc/meteos/rootwrap.d/: learning.filters
etc/oslo-config-generator/: meteos.conf
meteos/: context.py  exception.py  i18n.py  manager.py  opts.py  policy.py  rpc.py  service.py  test.py  utils.py  version.py  wsgi.py
meteos/api/: auth.py  common.py  urlmap.py  versions.py
meteos/api/contrib/: __init__.py
meteos/api/middleware/: auth.py  fault.py
meteos/api/openstack/: __init__.py  api_version_request.py  rest_api_version_history.rst  urlmap.py  versioned_method.py  wsgi.py
meteos/api/v1/: datasets.py  experiments.py  learnings.py  model_evaluations.py  models.py  router.py  templates.py
meteos/api/views/: datasets.py  experiments.py  learnings.py  model_evaluations.py  models.py  templates.py
meteos/cluster/: __init__.py  sahara.py
meteos/cmd/: api.py  engine.py  manage.py
meteos/common/: client_auth.py  config.py  constants.py
meteos/db/: __init__.py  api.py  base.py  migration.py
meteos/engine/: __init__.py  api.py  configuration.py  driver.py  manager.py  rpcapi.py
meteos/hacking/: checks.py
meteos/testing/: README.rst
meteos/tests/: __init__.py  conf_fixture.py  fake_notifier.py  test_context.py
releasenotes/source/: conf.py
tools/: install_venv_common.py
(+13 files in other folders)
