[metadata]
name = meteos
summary = Machine Learning for OpenStack
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://launchpad.net/meteos
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    meteos
[entry_points]
console_scripts =
    meteos-api = meteos.cmd.api:main
    meteos-manage = meteos.cmd.manage:main
    meteos-rootwrap = oslo_rootwrap.cmd:main
    meteos-engine = meteos.cmd.engine:main
# These are for backwards compat with Havana notification_driver configuration values
oslo_messaging.notify.drivers =
oslo.config.opts =
    meteos = meteos.opts:list_opts
oslo.config.opts.defaults =
    meteos = meteos.common.config:set_middleware_defaults

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = meteos/locale
domain = meteos

[update_catalog]
domain = meteos
output_dir = meteos/locale
input_file = meteos/locale/meteos.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = meteos/locale/meteos.pot

[wheel]
universal = 1

[pbr]
warnerrors = true
